--- a/styles/crankfish.css
+++ b/styles/crankfish.css
@@ -43,36 +43,36 @@
   font-display: swap;
   src: local('decrepit'),
   local('decrepit'),
-  url(/assets/decrepit.ttf) format('ttf');
+  url(../assets/decrepit.ttf) format('ttf');
 }
 
 @font-face {
   font-family: 'Dreamwalker';
-  src: url('/fonts/Dreamwalker.woff2') format('woff2'),
-      url('/fonts/Dreamwalker.woff') format('woff');
+  src: url('../fonts/Dreamwalker.woff2') format('woff2'),
+      url('../fonts/Dreamwalker.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'HighVoltage Rough';
-  src: url('/fonts/HighVoltageRough.woff2') format('woff2'),
-      url('/fonts/HighVoltageRough.woff') format('woff');
+  src: url('../fonts/HighVoltageRough.woff2') format('woff2'),
+      url('../fonts/HighVoltageRough.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'White On';
-  src: url('/fonts/WhiteOnBlack.woff2') format('woff2'),
-      url('/fonts/WhiteOnBlack.woff') format('woff');
+  src: url('../fonts/WhiteOnBlack.woff2') format('woff2'),
+      url('../fonts/WhiteOnBlack.woff') format('woff');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Dreamwalker';
-  src: url('/fonts/Dreamwalker.woff2') format('woff2'),
-      url('/fonts/Dreamwalker.woff') format('woff');
+  src: url('../fonts/Dreamwalker.woff2') format('woff2'),
+      url('../fonts/Dreamwalker.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -4907,7 +4907,7 @@ ul.slider-twitter .flickity-page-dots .dot.is-selected {
   }
   @media (pointer: coarse) and (hover: none) {
     .bg-vid-background  {
-      background: url('/images/header-bg-color-modify.jpg') black no-repeat center center scroll;
+      background: url('../images/header-bg-color-modify.jpg') black no-repeat center center scroll;
     }
     .bgvid {
       display: none;
